mask compare, fixes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,7 +32,7 @@ add_executable (depth2pcd_normal src/depth2pcd_normal.cpp)
 add_executable (depth3 src/depth3.cpp)
 add_executable (depthmask2pcd src/depthmask2pcd.cpp)
 add_executable (fitplane2mask src/fitplane2mask.cpp)
-add_executable (mask_outlier src/mask_outlier.cpp)
+add_executable (maskcompare src/maskcompare.cpp)
 add_executable (normal_performance_quality src/normal_performance_quality.cpp)
 add_executable (normal_performance_angle src/normal_performance_angle.cpp)
 add_executable (normal_performance_distribution src/normal_performance_distribution.cpp)
@@ -69,7 +69,7 @@ target_link_libraries (depth2pcd_normal ${OpenCV_LIBS} ${PCL_LIBRARIES})
 target_link_libraries (depth3 ${OpenCV_LIBS})
 target_link_libraries (depthmask2pcd ${OpenCV_LIBS} ${PCL_LIBRARIES})
 target_link_libraries (fitplane2mask ${OpenCV_LIBS} ${PCL_LIBRARIES})
-target_link_libraries (mask_outlier ${OpenCV_LIBS} ${PCL_LIBRARIES})
+target_link_libraries (maskcompare ${OpenCV_LIBS})
 target_link_libraries (normal_performance_quality ${PCL_LIBRARIES})
 target_link_libraries (normal_performance_angle ${PCL_LIBRARIES})
 target_link_libraries (normal_performance_distribution ${PCL_LIBRARIES})
