--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,7 @@ add_definitions(${PCL_DEFINITIONS})
 
 #add_executable (converter src/converter.cpp)
 add_executable (addnoise2depth src/addnoise2depth.cpp)
+add_executable (addnoise2rgb src/addnoise2rgb.cpp)
 add_executable (ascii2binary_xyz src/ascii2binary_xyz.cpp)
 add_executable (ascii2binary_xyznormal src/ascii2binary_xyznormal.cpp)
 add_executable (ascii2binary_xyzrgb src/ascii2binary_xyzrgb.cpp)
@@ -53,6 +54,7 @@ add_executable (depthn2pcd_normal src/depthn2pcd_normal.cpp)
 
 #target_link_libraries (converter ${PCL_LIBRARIES} pcl_common pcl_io)
 target_link_libraries (addnoise2depth ${OpenCV_LIBS})
+target_link_libraries (addnoise2rgb ${OpenCV_LIBS})
 target_link_libraries (ascii2binary_xyz ${PCL_LIBRARIES})
 target_link_libraries (ascii2binary_xyznormal ${PCL_LIBRARIES})
 target_link_libraries (ascii2binary_xyzrgb ${PCL_LIBRARIES})
