--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,12 @@ project(fileprocessing)
 
 find_package(PCL 1.2 REQUIRED)
 find_package(OpenCV REQUIRED)
+FIND_PACKAGE( OpenMP REQUIRED)
+if(OPENMP_FOUND)
+    message("OPENMP FOUND")
+    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
+endif()
 
 set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
@@ -21,6 +27,7 @@ add_executable (ascii2binary_xyz src/ascii2binary_xyz.cpp)
 add_executable (ascii2binary_xyznormal src/ascii2binary_xyznormal.cpp)
 add_executable (ascii2binary_xyzrgb src/ascii2binary_xyzrgb.cpp)
 add_executable (augdepth2pnormal src/augdepth2pnormal.cpp)
+add_executable (augnormalimages src/augnormalimages.cpp)
 add_executable (cloud2rgbimage src/cloud2rgbimage.cpp)
 add_executable (comparepcd src/comparepcd.cpp)
 add_executable (compute_normals src/compute_normals.cpp)
@@ -28,11 +35,13 @@ add_executable (create_mask src/create_mask.cpp)
 add_executable (depth_outlier_mask src/depth_outlier_mask.cpp)
 add_executable (depth2ir src/depth2ir.cpp)
 add_executable (depth2pcd src/depth2pcd.cpp)
+add_executable (depth2orderedpcd src/depth2orderedpcd.cpp)
 add_executable (depth2pcd_color src/depth2pcd_color.cpp)
 add_executable (depth2pcd_normal src/depth2pcd_normal.cpp)
 add_executable (depth3 src/depth3.cpp)
 add_executable (depthmask2pcd src/depthmask2pcd.cpp)
 add_executable (fitplane2mask src/fitplane2mask.cpp)
+add_executable (isaac_normalize_depth src/isaac_normalize_depth.cpp)
 add_executable (maskcompare src/maskcompare.cpp)
 add_executable (normal_performance_quality src/normal_performance_quality.cpp)
 add_executable (normal_performance_angle src/normal_performance_angle.cpp)
@@ -59,18 +68,21 @@ target_link_libraries (ascii2binary_xyz ${PCL_LIBRARIES})
 target_link_libraries (ascii2binary_xyznormal ${PCL_LIBRARIES})
 target_link_libraries (ascii2binary_xyzrgb ${PCL_LIBRARIES})
 target_link_libraries (augdepth2pnormal ${OpenCV_LIBS} ${PCL_LIBRARIES})
+target_link_libraries (augnormalimages ${OpenCV_LIBS})
 target_link_libraries (cloud2rgbimage ${OpenCV_LIBS} ${PCL_LIBRARIES})
 target_link_libraries (comparepcd ${PCL_LIBRARIES})
-target_link_libraries (compute_normals ${PCL_LIBRARIES})
+target_link_libraries (compute_normals ${PCL_LIBRARIES} ${OpenMP})
 target_link_libraries (create_mask ${OpenCV_LIBS})
 target_link_libraries (depth_outlier_mask ${OpenCV_LIBS} ${PCL_LIBRARIES})
 target_link_libraries (depth2ir ${OpenCV_LIBS})
 target_link_libraries (depth2pcd ${OpenCV_LIBS} ${PCL_LIBRARIES})
+target_link_libraries (depth2orderedpcd ${OpenCV_LIBS} ${PCL_LIBRARIES})
 target_link_libraries (depth2pcd_color ${OpenCV_LIBS} ${PCL_LIBRARIES})
 target_link_libraries (depth2pcd_normal ${OpenCV_LIBS} ${PCL_LIBRARIES})
 target_link_libraries (depth3 ${OpenCV_LIBS})
 target_link_libraries (depthmask2pcd ${OpenCV_LIBS} ${PCL_LIBRARIES})
 target_link_libraries (fitplane2mask ${OpenCV_LIBS} ${PCL_LIBRARIES})
+target_link_libraries (isaac_normalize_depth ${OpenCV_LIBS})
 target_link_libraries (maskcompare ${OpenCV_LIBS})
 target_link_libraries (normal_performance_quality ${PCL_LIBRARIES})
 target_link_libraries (normal_performance_angle ${PCL_LIBRARIES})
