correcting rounding error, pcd2normalimage, other stuff

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,6 +31,7 @@ add_executable (augnormalimages src/augnormalimages.cpp)
 add_executable (cloud2rgbimage src/cloud2rgbimage.cpp)
 add_executable (comparepcd src/comparepcd.cpp)
 add_executable (compute_normals src/compute_normals.cpp)
+add_executable (compute_normals_image src/compute_normals_image.cpp)
 add_executable (create_mask src/create_mask.cpp)
 add_executable (depth_outlier_mask src/depth_outlier_mask.cpp)
 add_executable (depth2ir src/depth2ir.cpp)
@@ -51,6 +52,7 @@ add_executable (normalizepcd src/normalizepcd.cpp)
 add_executable (pcd2depth src/pcd2depth.cpp)
 add_executable (pcd2xyz src/pcd2xyz.cpp)
 add_executable (pcdnormal2xyznc src/pcdnormal2xyznc.cpp)
+add_executable (pcdnormal2normalimage src/pcdnormal2normalimage.cpp)
 add_executable (pw_depthcompare src/pw_depthcompare.cpp)
 add_executable (pw_pcdcompare src/pw_pcdcompare.cpp)
 add_executable (sor src/sor.cpp)
@@ -72,6 +74,7 @@ target_link_libraries (augnormalimages ${OpenCV_LIBS})
 target_link_libraries (cloud2rgbimage ${OpenCV_LIBS} ${PCL_LIBRARIES})
 target_link_libraries (comparepcd ${PCL_LIBRARIES})
 target_link_libraries (compute_normals ${PCL_LIBRARIES} ${OpenMP})
+target_link_libraries (compute_normals_image ${OpenCV_LIBS} ${PCL_LIBRARIES} ${OpenMP})
 target_link_libraries (create_mask ${OpenCV_LIBS})
 target_link_libraries (depth_outlier_mask ${OpenCV_LIBS} ${PCL_LIBRARIES})
 target_link_libraries (depth2ir ${OpenCV_LIBS})
@@ -91,6 +94,7 @@ target_link_libraries (normal2rgb ${PCL_LIBRARIES})
 target_link_libraries (normalizepcd ${PCL_LIBRARIES})
 target_link_libraries (pcd2depth ${OpenCV_LIBS} ${PCL_LIBRARIES})
 target_link_libraries (pcd2xyz ${PCL_LIBRARIES})
+target_link_libraries (pcdnormal2normalimage ${OpenCV_LIBS} ${PCL_LIBRARIES})
 target_link_libraries (pcdnormal2xyznc ${PCL_LIBRARIES})
 target_link_libraries (pw_depthcompare ${OpenCV_LIBS})
 target_link_libraries (pw_pcdcompare ${OpenCV_LIBS} ${PCL_LIBRARIES})
