normal performance uneven pcd sizes using depth conversion

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,6 +48,7 @@ add_executable (maskcompare src/maskcompare.cpp)
 add_executable (normal_performance_angle src/normal_performance_angle.cpp)
 add_executable (normal_performance_distribution src/normal_performance_distribution.cpp)
 add_executable (normal_performance_quality src/normal_performance_quality.cpp)
+add_executable (normal_performance_quality2 src/normal_performance_quality2.cpp)
 add_executable (normal2rgb src/normal2rgb.cpp)
 add_executable (normalizepcd src/normalizepcd.cpp)
 add_executable (pcd2depth src/pcd2depth.cpp)
@@ -91,6 +92,7 @@ target_link_libraries (maskcompare ${OpenCV_LIBS})
 target_link_libraries (normal_performance_angle ${PCL_LIBRARIES})
 target_link_libraries (normal_performance_distribution ${PCL_LIBRARIES})
 target_link_libraries (normal_performance_quality ${PCL_LIBRARIES})
+target_link_libraries (normal_performance_quality2 ${PCL_LIBRARIES})
 target_link_libraries (normal2rgb ${PCL_LIBRARIES})
 target_link_libraries (normalizepcd ${PCL_LIBRARIES})
 target_link_libraries (pcd2depth ${OpenCV_LIBS} ${PCL_LIBRARIES})
