--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,6 +42,7 @@ add_executable (depth2pcd_normal src/depth2pcd_normal.cpp)
 add_executable (depth3 src/depth3.cpp)
 add_executable (depthmask2pcd src/depthmask2pcd.cpp)
 add_executable (depthn2pcd_normal src/depthn2pcd_normal.cpp)
+add_executable (filter_performance src/filter_performance.cpp)
 add_executable (fitplane2mask src/fitplane2mask.cpp)
 add_executable (isaac_normalize_depth src/isaac_normalize_depth.cpp)
 add_executable (maskcompare src/maskcompare.cpp)
@@ -86,6 +87,7 @@ target_link_libraries (depth2pcd_normal ${OpenCV_LIBS} ${PCL_LIBRARIES})
 target_link_libraries (depth3 ${OpenCV_LIBS})
 target_link_libraries (depthmask2pcd ${OpenCV_LIBS} ${PCL_LIBRARIES})
 target_link_libraries (depthn2pcd_normal ${OpenCV_LIBS} ${PCL_LIBRARIES})
+target_link_libraries (filter_performance ${PCL_LIBRARIES})
 target_link_libraries (fitplane2mask ${OpenCV_LIBS} ${PCL_LIBRARIES})
 target_link_libraries (isaac_normalize_depth ${OpenCV_LIBS})
 target_link_libraries (maskcompare ${OpenCV_LIBS})
