--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,8 +53,10 @@ add_executable (normal_performance_quality2 src/normal_performance_quality2.cpp)
 add_executable (normal2rgb src/normal2rgb.cpp)
 add_executable (normalizepcd src/normalizepcd.cpp)
 add_executable (off2pcd src/off2pcd.cpp)
+add_executable (obj2pcd src/obj2pcd.cpp)
 add_executable (pcd2depth src/pcd2depth.cpp)
 add_executable (pcd2xyz src/pcd2xyz.cpp)
+add_executable (pcd2obj src/pcd2obj.cpp)
 add_executable (pcdnormal2normalimage src/pcdnormal2normalimage.cpp)
 add_executable (pcdnormal2xyznc src/pcdnormal2xyznc.cpp)
 add_executable (pw_depthcompare src/pw_depthcompare.cpp)
@@ -99,8 +101,10 @@ target_link_libraries (normal_performance_quality2 ${PCL_LIBRARIES})
 target_link_libraries (normal2rgb ${PCL_LIBRARIES})
 target_link_libraries (normalizepcd ${PCL_LIBRARIES})
 target_link_libraries (off2pcd ${PCL_LIBRARIES})
+target_link_libraries (obj2pcd ${PCL_LIBRARIES})
 target_link_libraries (pcd2depth ${OpenCV_LIBS} ${PCL_LIBRARIES})
 target_link_libraries (pcd2xyz ${PCL_LIBRARIES})
+target_link_libraries (pcd2obj ${PCL_LIBRARIES})
 target_link_libraries (pcdnormal2normalimage ${OpenCV_LIBS} ${PCL_LIBRARIES})
 target_link_libraries (pcdnormal2xyznc ${PCL_LIBRARIES})
 target_link_libraries (pw_depthcompare ${OpenCV_LIBS})
