ir processing files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,6 +45,8 @@ add_executable (depthn2pcd_normal src/depthn2pcd_normal.cpp)
 add_executable (filter_performance src/filter_performance.cpp)
 add_executable (fitplane2mask src/fitplane2mask.cpp)
 add_executable (isaac_normalize_depth src/isaac_normalize_depth.cpp)
+add_executable (ir2depth src/ir2depth.cpp)
+add_executable (ir3 src/ir3.cpp)
 add_executable (maskcompare src/maskcompare.cpp)
 add_executable (normal_performance_angle src/normal_performance_angle.cpp)
 add_executable (normal_performance_distribution src/normal_performance_distribution.cpp)
@@ -61,6 +63,7 @@ add_executable (pcdnormal2normalimage src/pcdnormal2normalimage.cpp)
 add_executable (pcdnormal2xyznc src/pcdnormal2xyznc.cpp)
 add_executable (pw_depthcompare src/pw_depthcompare.cpp)
 add_executable (pw_pcdcompare src/pw_pcdcompare.cpp)
+add_executable (separate_irdepth src/separate_irdepth.cpp)
 add_executable (sor src/sor.cpp)
 add_executable (sweep src/sweep_nan.cpp)
 add_executable (voxel_filter src/voxel_filter.cpp)
@@ -93,6 +96,8 @@ target_link_libraries (depthn2pcd_normal ${OpenCV_LIBS} ${PCL_LIBRARIES})
 target_link_libraries (filter_performance ${PCL_LIBRARIES})
 target_link_libraries (fitplane2mask ${OpenCV_LIBS} ${PCL_LIBRARIES})
 target_link_libraries (isaac_normalize_depth ${OpenCV_LIBS})
+target_link_libraries (ir2depth ${OpenCV_LIBS})
+target_link_libraries (ir3 ${OpenCV_LIBS})
 target_link_libraries (maskcompare ${OpenCV_LIBS})
 target_link_libraries (normal_performance_angle ${PCL_LIBRARIES})
 target_link_libraries (normal_performance_distribution ${PCL_LIBRARIES})
@@ -109,6 +114,7 @@ target_link_libraries (pcdnormal2normalimage ${OpenCV_LIBS} ${PCL_LIBRARIES})
 target_link_libraries (pcdnormal2xyznc ${PCL_LIBRARIES})
 target_link_libraries (pw_depthcompare ${OpenCV_LIBS})
 target_link_libraries (pw_pcdcompare ${OpenCV_LIBS} ${PCL_LIBRARIES})
+target_link_libraries (separate_irdepth ${OpenCV_LIBS})
 target_link_libraries (sor ${PCL_LIBRARIES})
 target_link_libraries (sweep ${PCL_LIBRARIES})
 target_link_libraries (voxel_filter ${PCL_LIBRARIES})
